<resources>
    <string name="app_name">运动故事</string>
    <string name="nearby_title">附近的人</string>
    <string name="chat_title">消 息</string>
    <string name="focus_title">关 注</string>
    <string name="timeline_title">动 态</string>
    <string name="activity_title">活 动</string>
    <string name="me_title">我的主页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--登录注册-->
    <string name="login_login">登 录</string>
    <string name="phone">手机</string>
    <string name="phone_or_email">手机/邮箱</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="password_8_to_20">密码(8~20位)</string>
    <string name="vcode">验证码</string>
    <string name="login_with_password">密码登录</string>
    <string name="login_with_vcode">验证码登录</string>
    <string name="login_forgot_password">忘记密码?</string>
    <string name="login_logon">注 册></string>
    <string name="login_login_with_third_way">其他方式登录></string>
    <string name="login_tip_if_not_register">未注册手机号登录时将自动注册</string>
    <string name="verify_phone">验证手机</string>
    <string name="verify">验 证</string>
    <string name="set_password">设置密码</string>
    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="register">注 册</string>
    <string name="upload_avatar">上传头像</string>
    <string name="nickname_with_4_30">昵称(4~30个字符)</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="birthday">生日</string>
    <string name="address">地区</string>
    <string name="perfect_info">完善信息</string>
    <string name="your_location">所在地区</string>
    <string name="next_step">下一步</string>
    <string name="skip">跳过</string>
    <string name="locate_city">定位城市</string>
    <string name="choose_one_to_three_sports">请选择最喜欢的1到3项运动类型</string>
    <string name="click_to_change_sports_level">点击修改您的运动水平</string>
    <string name="enter_right_phone">请输入正确的手机号</string>
    <string name="relogin">登录过期，请重新登录</string>
    <string name="vcode_error">验证码错误</string>
    <string name="account_or_code_wrong">帐号或验证码错误，请重试</string>
    <string name="account_or_psd_wrong">帐号或密码错误，请重试</string>
    <string name="uploading">上传中...</string>
    <!--个人账号-->

    <string name="edit_profile">修改资料</string>
    <string name="following">关注</string>
    <string name="followers">粉丝</string>
    <string name="tip_confirm_has_sdcard">请确认已插入sdk卡</string>
    <string name="operation_failed">操作失败，请重试</string>
    <string name="tip">提示</string>
    <string name="edit_unsave">更改尚未保存，是否确认退出？</string>
    <string name="locating">定位中...</string>


    <!--提示语-->
    <string name="net_disconnect">已断开连接，请检查您的网络设置</string>
    <string name="server_error">服务器错误</string>
    <string name="common_error">操作失败，请重试</string>
    <string name="send_vcode_failed">发送失败，请重试</string>
    <string name="send_vcode_success">发送成功</string>

    <string name="cancel_without_space">取消</string>
    <string name="confirm_without_space">确定</string>

    <!--星座-->
    <string name="constellation_0">水瓶座</string>
    <string name="constellation_1">双鱼座</string>
    <string name="constellation_2">白羊座</string>
    <string name="constellation_3">金牛座</string>
    <string name="constellation_4">双子座</string>
    <string name="constellation_5">巨蟹座</string>
    <string name="constellation_6">狮子座</string>
    <string name="constellation_7">处女座</string>
    <string name="constellation_8">天秤座</string>
    <string name="constellation_9">天蝎座</string>
    <string name="constellation_10">射手座</string>
    <string name="constellation_11">摩羯座</string>

    <!--附近的人-->
    <string name="search">搜索</string>
    <string name="filter">筛选</string>
    <string name="sport_level">运动水平</string>
    <string name="sport_type">运动类型</string>
    <string name="click_to_select">点击选择</string>

    <!--网络相关-->
    <string name="net_time_out">连接超时, 请检查您的网络设置</string>

    <!--设置-->
    <string name="settings">设 置</string>
    <string name="update_account">修改资料</string>
    <string name="account_security">账号安全</string>
    <string name="message_setting">消息推送</string>
    <string name="real_name_verify">实名认证</string>
    <string name="about_sport_story">关于</string>
    <string name="invite_friends">邀请好友</string>
    <string name="upload_contacts">同步通讯录</string>
    <string name="check_for_update">检查更新</string>
    <string name="clear_storage">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="change_phone">修改手机</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="binding_new_email">绑定新邮箱</string>
    <string name="change_password">修改密码</string>
    <string name="your_current_phone_is">您当前绑定手机号为:</string>
    <string name="confirm_change">确定修改</string>
    <string name="confirm_password_8_to_20">确认密码(8~20位)</string>
    <string name="change_email">修改邮箱</string>
    <string name="your_current_email_is">您当前绑定的邮箱为:</string>
    <string name="feedback">意见反馈</string>
    <string name="help">常见问题及帮助</string>
    <string name="protocol">用户协议</string>
    <string name="notification_setting">消息提醒</string>
    <string name="accept_msg_push">消息提醒</string>
    <string name="vibration">震动</string>
    <string name="voice">声音</string>
    <string name="no_disturb">消息免打扰</string>
    <string name="already_binding_this_email">您已绑定至此邮箱</string>
    <string name="binding_email_successful">绑定成功</string>
    <string name="write_your_feedback">写下您的宝贵意见吧！</string>
    <string name="has_not_commit">尚未提交，是否退出？</string>
    <string name="tip_input_content">请输入反馈意见</string>
    <string name="cleaning">正在清除...</string>

    <!--朋友圈-->
    <string name="post_timeline">发表动态</string>
    <string name="story_dtail">详情</string>

    <!--权限-->
    <string name="request_explanation_access_location">申请定位</string>
    <string name="request_explanation_read_contacts">申请读取通讯录</string>
    <string name="request_explanation_WRITE_EXTERNAL_STORAGE">申请存储空间权限</string>
    <string name="request_explanation_camera">申请相机权限</string>


    <string name="test_comment_content">回复<font color='#FF0000'>高圆圆</font>我帅吗</string>
</resources>
