<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_password"
            style="@style/toolBarTextViewStyle" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_or_email"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="20"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_with_password"
        style="@style/RoundButton45"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_login" />

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_login_with_vcode"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/login_with_vcode"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_login_with_password_forget_psd"
            android:layout_width="wrap_content"
            android:text="@string/login_forgot_password"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</LinearLayout>