<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login_with_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        toolbar:navigationIcon="@mipmap/back"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/toolbar_title_text_color"
            android:textSize="@dimen/toolbar_title_text_size" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#242424"
            android:textSize="16sp"
            android:text="@string/gender"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/male_free"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:gravity="left"
                android:layout_height="match_parent"
                android:src="@mipmap/female_free"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#242424"
            android:textSize="16sp"
            android:text="@string/age"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#242424"
            android:textSize="16sp"
            android:text="@string/sport_type"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_select"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="110dp"
            android:textColor="#242424"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/sport_level"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_select"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>



</LinearLayout>
