<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        toolbar:elevation="@dimen/toolbar_elevation"
        toolbar:navigationIcon="@mipmap/back">

        <TextView
            style="@style/toolBarTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfect_info" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/choose_one_to_three_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/rv_choose_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_choose_sports_finish"
        style="@style/RoundButton45"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/next_step" />


</LinearLayout>