<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="cn.sportstory.android.account.view.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:gravity="center"
        toolbar:navigationIcon="@mipmap/back"
        android:elevation="4dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/toolbar_title_text_color"
            android:textSize="@dimen/toolbar_title_text_size" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_8_to_20"
            android:maxLength="20"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/psd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_8_to_20"
            android:maxLength="20"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        style="@style/RoundButton45"
        android:text="@string/confirm_change"
        android:layout_height="wrap_content" />

</LinearLayout>

