<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toolbar="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login_with_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        toolbar:navigationIcon="@mipmap/back"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_phone"
            style="@style/toolBarTextViewStyle" />
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ev_verify_phone_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/ev_verify_phone_vcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vcode"
                android:maxLines="1"
                android:maxLength="6"
                android:textColorHint="@color/black"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_verify_phone_send_vcode"
            style="@style/RoundButtonSendVcode" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_verify_phone_verify"
        style="@style/RoundButton45"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/verify" />

</LinearLayout>