<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="cn.sportstory.android.account.view.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:gravity="center"
        toolbar:navigationIcon="@mipmap/back"
        android:elevation="4dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/toolbar_title_text_color"
            android:textSize="@dimen/toolbar_title_text_size" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tip"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/your_current_email_is"/>

    <TextView
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        style="@style/RoundButton45"
        android:text="@string/binding_new_email"
        android:layout_height="wrap_content" />

</LinearLayout>

