<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login_with_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/set_password"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/toolbar_title_text_color"
            android:textSize="@dimen/toolbar_title_text_size" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ev_set_psd_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_8_to_20"
            android:maxLength="20"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_set_psd_confirm"
        style="@style/RoundButton45"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/confirm" />


</LinearLayout>