<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="cn.sportstory.android.account.view.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:elevation="@dimen/toolbar_elevation"
        app:contentInsetLeft="@dimen/toolbar_content_insert"
        app:contentInsetStart="@dimen/toolbar_content_insert"
        android:gravity="center"
        toolbar:navigationIcon="@mipmap/back"
        android:elevation="4dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            style="@style/toolBarTextViewStyle" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/post"
            style="@style/RoundButton45"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/confirm"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_feedback_content"
            android:layout_width="match_parent"
            android:layout_above="@id/post"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:lines="6"
            android:gravity="top"
            android:maxLines="10"
            android:layout_margin="30dp"
            android:background="#ffffff"
            android:focusableInTouchMode="true"
            android:textSize="15sp"
            android:hint="@string/write_your_feedback" />
    </RelativeLayout>



</LinearLayout>
